# useful_tools

./: .envrc  .gitignore  LICENSE  README.md  hello.py  pyproject.toml  test_of_hello.py
source/common/: common.py  gui_launcher.py  main.py
source/convert_libre_to_pdf/: cltp_class.py  cltp_with_cui.py  cltp_with_gui.py
source/convert_office_to_pdf/: cotp_class.py  cotp_with_cui.py  cotp_with_gui.py
source/convert_to_md/: ctm_class.py  ctm_with_cui.py  ctm_with_gui.py
source/edit_pdf/: ep_class.py  ep_with_cui.py  ep_with_gui.py
source/get_file_list/: gfl_class.py  gfl_with_cui.py  gfl_with_gui.py
source/get_government_statistics/: g2s_class.py  g2s_with_cui.py  g2s_with_gui.py
source/get_japan_government_statistics/: gjgs_class.py  gjgs_with_cui.py  gjgs_with_gui.py
source/pdf_tools/: pt_class.py  pt_with_cui.py  pt_with_gui.py
tests/common/: test_of_main.py
tests/convert_libre_to_pdf/: test_of_cltp_with_cui.py
tests/convert_office_to_pdf/: test_of_cotp_with_cui.py
tests/convert_to_md/: test_of_ctm_with_cui.py
tests/edit_pdf/: test_of_ep_with_cui.py
tests/get_file_list/: test_of_gfl_with_cui.py
tests/get_government_statistics/: test_of_g2s_with_cui.py
tests/get_japan_government_statistics/: test_of_gjgs_with_cui.py
tests/pdf_tools/: test_of_pt_with_cui.py
